# xbin

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  README.md  configure.ac  libtool  make_all.sh
src/: Makefile.am  main.c  platform.c  platform.h  xbin.h
src/inclinks/: files.h
